--- a/build.yaml
+++ b/build.yaml
@@ -16,11 +16,8 @@
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
 #
-
-board: ["nice_nano_v2"]
-shield: ["corne_left", "corne_right"]
 include:
   - board: nice_nano_v2
-    shield: corne_left nice_view
+    shield: corne_left
   - board: nice_nano_v2
-    shield: corne_right nice_view
+    shield: corne_right
