--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,7 +6,8 @@
 CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following line to increase the keyboard's wireless range
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# This didn't seem to actually work sadly
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
